updated link colors, fixed horiz bar issue

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer-txt">
-  <div class="row">
+  <div>
     <div class="col-md-3"></div>
     <div class="col-md-6 text-center">
       <a href="/">{{ site.footnote }} {{ site.baseurl }}</a>
