fixed navbar link and favicon colors

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,13 +1,10 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <!-- <div class="navbar-header"> -->
-    <!--   <a class="navbar-brand" href="/">lgilfandino</a> -->
-    <!-- </div> -->
     <ul class="nav navbar-nav">
       {% for item in site.navigation %}
       {% assign path_no_idx = page.url | replace: "index.html", "" | replace: "index.md", "" %}
-      <li {% if path_no_idx == item.link %}class="active navbar-li"{% else %}class="navbar-li"{% endif %}>
-        <a href="{{ item.link }}">{{ item.name }}</a>
+      <li {% if path_no_idx == item.link %}class="nav-selected navbar-li"{% else %}class="navbar-li"{% endif %}>
+        <a href="{{ item.link }}" class="hello">{{ item.name }}</a>
       </li>
       {% endfor %}
     </ul>
